# dreamswarm

./: .dockerignore  .gitignore  .typos.toml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  docker-compose.yml  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  dependency-audit.yml  docker.yml  docs.yml  nightly.yml  release.yml
docs/: index.html  sitemap.xml
docs/contributor-guide/: code-style.md  commit-conventions.md  first-contribution.md  review-checklist.md  testing-guide.md  tool-authoring.md
docs/rfcs/: 000-template.md
examples/custom_signal_source/: README.md
examples/custom_tool/: README.md
examples/mcp_integration/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bash_security.rs  fuzz_json_parsing.rs
migrations/: 001_initial.sql
scripts/: dev-setup.sh
src/: lib.rs  main.rs
src/api/: server.rs  telemetry.rs
src/context/: auto_compact.rs  cache_tracker.rs  full_compact.rs  manager.rs  micro_compact.rs  mod.rs  token_counter.rs
src/daemon/: brief_mode.rs  daily_log.rs  healing.rs  heartbeat.rs  initiative.rs  kairos.rs  mod.rs  persistence.rs  process.rs  schedule.rs  signals.rs  trust.rs
src/db/: mod.rs  schema.rs
src/dream/: analyzer.rs  autopilot.rs  collector.rs  engine.rs  mirror.rs  mod.rs  planner.rs  pruner.rs  report.rs  sandbox.rs  synthesizer.rs
src/memory/: global.rs  index.rs  loader.rs  mod.rs  relay.rs  search.rs  topics.rs  transcripts.rs  vector.rs  writer.rs
src/prompts/: roles.rs  system.rs
src/query/: engine.rs  mod.rs  router.rs  streaming.rs
src/query/providers/: anthropic.rs  deepseek.rs  featherless.rs  mod.rs  ollama.rs  openai.rs
src/runtime/: agent_loop.rs  config.rs  mod.rs  permissions.rs  session.rs
src/swarm/: adversarial.rs  coordinator.rs  lifecycle.rs  mailbox.rs  mod.rs  result_merger.rs  subagent.rs  task_list.rs
src/swarm/diagnostics/: mod.rs  war_room.rs
src/swarm/evolution/: coordinator.rs  mod.rs  prompt_evolution.rs
src/swarm/executors/: in_process.rs  mod.rs  ssh.rs  tmux.rs  worktree.rs
src/tools/: ask_user.rs  bash_tool.rs  daemon_status.rs  dream_trigger.rs  file_read.rs  file_write.rs  git.rs  grep_tool.rs  js_tool.rs  memory_tools.rs  mod.rs  monitor_tool.rs  push_notification.rs  python_tool.rs  rust_debug.rs  swarm_tools.rs  synthesis.rs
src/tui/: app.rs  mod.rs  swarm_dashboard.rs
static/: dashboard.html  index.html
tests/: context_compression_test.rs  daemon_integration.rs  dream_integration.rs  memory_integration.rs  ph11_final_test.rs  swarm_communication.rs  swarm_integration.rs
