[package]
name = "dreamswarm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# API / HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI & CLI
ratatui = "0.26"
clap = { version = "4.5", features = ["derive"] }
colored = "2"

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
sha2 = "0.10"
notify = "6.1"
dirs = "5.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
ctrlc = "3.4"
