[package]
name = "dreamswarm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An autonomous multi-agent AI coding assistant with swarm intelligence, role-based personas, and a persistent knowledge graph"
repository = "https://github.com/knarayanareddy/dreamswarm"
homepage = "https://github.com/knarayanareddy/dreamswarm"
keywords = ["ai", "agent", "swarm", "llm", "autonomous"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# API / HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
opendal = { version = "0.50", features = ["services-s3", "layers-tracing"] }
aws-config = "1.1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI & CLI
ratatui = "0.26"
clap = { version = "4.5", features = ["derive"] }
colored = "2"

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
sha2 = "0.10"
notify = "6.1"
dirs = "5.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.10"
ctrlc = "3.4"
crossterm = "0.27"
openssl = { version = "0.10", features = ["vendored"] }
fastembed = { version = "5.13.0", features = ["ort-download-binaries-rustls-tls"] }
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic", "download-binaries", "copy-dylibs", "ndarray", "tls-rustls"] }
ndarray = "0.17.2"
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rand = "0.10.0"

[dev-dependencies]
filetime = "0.2"
